k8s/account.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account
spec:
  selector:
    matchLabels:
      app: account
  template:
    metadata:
      labels:
        app: account
    spec:
      containers:
      - name: account
        image: 'may24DevOpsContainers.azurecr.io/project-registry-account-microservice:0.0.1-SNAPSHOT'
        resources:
          requests:
            memory: "1024Mi"
            cpu: "375m"
          limits:
            memory: "1500Mi"
            cpu: "400m"
        ports:
        - containerPort: 8081
---

apiVersion: v1
kind: Service
metadata:
  name: account
spec:
  selector:
    app: account
  ports:
  - port: 8081
    targetPort: 8081
