k8s/consul.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consul
spec:
  selector:
    matchLabels:
      app: consul
  template:
    metadata:
      labels:
        app: consul
    spec:
      containers:
      - name: consul
        image: team1/consul:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8500

---

apiVersion: v1
kind: Service
metadata:
  name: consul-service
spec:
  type: NodePort
  selector:
    app: consul
  ports:
  - port: 8500
    targetPort: 8500
