k8s/project.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project
spec:
  selector:
    matchLabels:
      app: project
  template:
    metadata:
      labels:
        app: project
    spec:
      imagePullSecrets:
        - name: acr-secret
      containers:
      - name: project
        image: 'may24DevOpsContainers.azurecr.io/project-registry-project-microservice:0.0.1-SNAPSHOT'
        resources:
          requests:
            memory: "1024Mi"
            cpu: "375m"
          limits:
            memory: "1500Mi"
            cpu: "400m"
        ports:
        - containerPort: 8082
---

apiVersion: v1
kind: Service
metadata:
  name: project
spec:
  selector:
    app: project
  ports:
  - port: 8082
    targetPort: 8082
